# lightflow

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
.github/workflows/: test.yml
examples/fashion_mnist/: fashion_mnist.cc  fashion_mnist_dataset.cc  fashion_mnist_dataset.h
examples/fashion_mnist/data/: fashion_mnist_test_labels.csv  fashion_mnist_test_vectors.csv  fashion_mnist_train_labels.csv  fashion_mnist_train_vectors.csv
extra/: matmul.cc
extra/benchmark/: benchmark.cc  benchmark.py  benchmark.sh
include/lightflow/: config.h  diff.h  loss.h  nn.h  optimizer.h  tensor.h
include/lightflow/accel/: avx.h  cpu.h  cuda.cuh
src/: config.cc  diff.cc  loss.cc  nn.cc  optimizer.cc  tensor.cc  utility.ipp
src/accel/: avx.cc  cpu.cc  cuda.cu  cuda.cuh
test/: tensor-unittest.cpp
